k8s/qa/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jcmcp-qa
  namespace: jcmcp-qa
spec:
  selector:
    app: jcmcp-qa
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
